workloads/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: force-covid19-frontend
  name: force-covid19-frontend
  namespace: front
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: force-covid19-frontend
  sessionAffinity: None
  type: ClusterIP
